# django-tutorial

./: README.md  pyproject.toml
djangotutorial/: db.sqlite3
djangotutorial/mysite/: settings.py  urls.py
djangotutorial/polls/: models.py  tests.py  urls.py  views.py
djangotutorial/polls/migrations/: 0001_initial.py
djangotutorial/polls/static/polls/: style.css
djangotutorial/polls/templates/polls/: index.html
djangotutorial/templates/admin/: base_site.html
